--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "promises-aplus-tests test/adapter"
+    "test": "babel index.js --out-dir lib --presets=@babel/env && promises-aplus-tests test/adapter"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "promises-aplus-tests": "*"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.0.0"
   }
 }
