--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
+    "prettier": "1.14.3",
     "promises-aplus-tests": "*"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0"
+    "@babel/polyfill": "^7.0.0",
+    "lodash": "^4.17.11"
   }
 }
