--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "type": "git",
     "url": "git@github.com:futantan/nuo.js.git"
   },
-  "keywords": ["promise", "promises", "promises-aplus", "Promises/A+", "nuo.js"],
+  "keywords": [
+    "promise",
+    "promises",
+    "promises-aplus",
+    "Promises/A+",
+    "nuo.js"
+  ],
   "author": {
     "name": "futantan",
     "email": "luckytantanfu@gmail.com"
